Update version of Nextonsoft.Json Other updates when running the QPlanet WCF and MVC project locallly.

--- a/QService/Source/Quintessence.QService.QPlanetService.Host/Web.config
+++ b/QService/Source/Quintessence.QService.QPlanetService.Host/Web.config
@@ -9,7 +9,7 @@
   </appSettings>
   <connectionStrings>
     <!--<add name="Quintessence" connectionString="Server=vm-test;Database=Quintessence;User ID=QuintessenceUser;Password=$Quint123;Trusted_Connection=False;Persist Security Info=True;" providerName="System.Data.SqlClient" />-->
-    <add name="Quintessence" providerName="System.Data.SqlClient" connectionString="Data Source=QD21\LOCAL;Initial Catalog=Quintessence;User ID=QuintessenceUser;Password=$Quint123;" />
+    <add name="Quintessence" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=Quintessence_QPlanet;Integrated Security=True" />
     <!--<add name="SharePoint" connectionString="Url=http://qshare.quintessence.be;UserName=ceddy;Password=1975Koffiekoek;Domain=QUINT" />-->
     <add name="ReportingService" connectionString="Url=http://ws13-qnt-sql01/ReportServer_QNT01S/ReportExecution2005.asmx;UserName=ceddy;Password=1975Koffiekoek;Domain=QUINT" />
   </connectionStrings>
