Refactor query to handle Dapper mapping + GetAssesmentByCandidateIdAndDateQuery(Handler)
#6854

--- a/src/Hosts/Quintessence.QCandidate.Web/appsettings.Development.json
+++ b/src/Hosts/Quintessence.QCandidate.Web/appsettings.Development.json
@@ -3,5 +3,8 @@
     "MinimumLevel": {
       "Default": "Debug"
     }
+  },
+  "ConnectionStrings": {
+    "QPlanet": "Server=.;Database=Quintessence_QPlanet;Trusted_Connection=True;"
   }
 }
