--- a/src/Hosts/Quintessence.QCandidate.Web/Quintessence.QCandidate.Web.csproj
+++ b/src/Hosts/Quintessence.QCandidate.Web/Quintessence.QCandidate.Web.csproj
@@ -25,9 +25,13 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.35" />
+    <PackageReference Include="Kenze.Infrastructure" Version="1.3.201911131" />
+    <PackageReference Include="Kenze.Infrastructure.Dapper" Version="1.3.201912191" />
+    <PackageReference Include="Kenze.Infrastructure.Interfaces" Version="1.3.201911081" />
     <PackageReference Include="MediatR" Version="8.0.1" Condition="'$(MediatR)' == 'true'" />
     <PackageReference Include="MediatR" Version="8.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" Condition="'$(MediatR)' == 'true'" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.14.0" />
     <PackageReference Include="Microsoft.AspNetCore.AzureAppServicesIntegration" Version="3.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="4.1.1" />
@@ -48,8 +52,6 @@
 
   <ItemGroup>
     <Folder Include="Contracts\Requests\" />
-    <Folder Include="Core\Queries\" />
-    <Folder Include="Logic\Queries\" />
   </ItemGroup>
 
 </Project>
