--- a/src/Hosts/Quintessence.QCandidate.Web/Quintessence.QCandidate.Web.csproj
+++ b/src/Hosts/Quintessence.QCandidate.Web/Quintessence.QCandidate.Web.csproj
@@ -52,6 +52,7 @@
 
   <ItemGroup>
     <Folder Include="Contracts\Requests\" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
