Added SimulationCombinationsController + setting 'PdfStorageLocation'
#6875

--- a/src/Hosts/Quintessence.QCandidate.Web/appsettings.Development.json
+++ b/src/Hosts/Quintessence.QCandidate.Web/appsettings.Development.json
@@ -6,5 +6,6 @@
   },
   "ConnectionStrings": {
     "QPlanet": "Server=.;Database=Quintessence_QPlanet;Trusted_Connection=True;"
-  }
+  },
+  "PdfStorageLocation":  "c:\\temp\\pdf" 
 }
