--- a/src/Hosts/Quintessence.QCandidate.Web/appsettings.Development.json
+++ b/src/Hosts/Quintessence.QCandidate.Web/appsettings.Development.json
@@ -7,5 +7,14 @@
   "ConnectionStrings": {
     "QPlanet": "Server=.;Database=Quintessence_QPlanet;Trusted_Connection=True;"
   },
-  "PdfStorageLocation":  "c:\\temp\\pdf" 
+  "PdfStorageLocation": "c:\\temp\\pdf",
+  "AzureAdB2C": {
+    "Instance": "https://kenzequintessenceb2cdev.b2clogin.com/tfp/",
+    "ClientId": "cb70571a-aa65-4e68-96dc-dfc27d8a94a0",
+    "CallbackPath": "/signin-oidc",
+    "Domain": "kenzequintessenceb2cdev.onmicrosoft.com",
+    "SignUpSignInPolicyId": "B2C_1_SignIn2",
+    "ResetPasswordPolicyId": "",
+    "EditProfilePolicyId": ""
+  }
 }
