--- a/src/Hosts/Quintessence.QCandidate.Web/Quintessence.QCandidate.Web.csproj
+++ b/src/Hosts/Quintessence.QCandidate.Web/Quintessence.QCandidate.Web.csproj
@@ -22,6 +22,27 @@
     <RootNamespace>Quintessence.QCandidate</RootNamespace>
     <AssemblyName>QCandidate.Web</AssemblyName>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="wwwroot\lib\**" />
+    <Content Remove="wwwroot\lib\**" />
+    <EmbeddedResource Remove="wwwroot\lib\**" />
+    <None Remove="wwwroot\lib\**" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="wwwroot\css\materialize.css" />
+    <None Remove="wwwroot\css\style.css" />
+    <None Remove="wwwroot\img\facebook-dark.svg" />
+    <None Remove="wwwroot\img\facebook.svg" />
+    <None Remove="wwwroot\img\linkedin-dark.svg" />
+    <None Remove="wwwroot\img\linkedin.svg" />
+    <None Remove="wwwroot\img\logo.svg" />
+    <None Remove="wwwroot\img\twitter-dark.svg" />
+    <None Remove="wwwroot\img\twitter.svg" />
+    <None Remove="wwwroot\img\youtube-dark.svg" />
+    <None Remove="wwwroot\img\youtube.svg" />
+    <None Remove="wwwroot\js\materialize.js" />
+    <None Remove="wwwroot\js\script.js" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.35" />
@@ -53,6 +74,53 @@
 
   <ItemGroup>
     <Folder Include="Contracts\Requests\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\css\materialize.min.css" />
+    <None Include="wwwroot\js\materialize.min.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="wwwroot\css\materialize.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\css\style.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\img\facebook-dark.svg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\img\facebook.svg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\img\linkedin-dark.svg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\img\linkedin.svg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\img\logo.svg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\img\twitter-dark.svg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\img\twitter.svg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\img\youtube-dark.svg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\img\youtube.svg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\js\materialize.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\js\script.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
