--- a/src/Hosts/Quintessence.QCandidate.Web/Quintessence.QCandidate.Web.csproj
+++ b/src/Hosts/Quintessence.QCandidate.Web/Quintessence.QCandidate.Web.csproj
@@ -60,6 +60,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.SlowCheetah" Version="3.2.26">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
@@ -77,11 +81,18 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="appsettings.Release.json">
+      <IsTransformFile>true</IsTransformFile>
+      <DependentUpon>appsettings.json</DependentUpon>
+    </None>
     <None Include="wwwroot\css\materialize.min.css" />
     <None Include="wwwroot\js\materialize.min.js" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="appsettings.json">
+      <TransformOnBuild>true</TransformOnBuild>
+    </Content>
     <Content Update="wwwroot\css\materialize.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
