Updated .net framework version from 4.5 to 4.6.1 + updated user creation
#6884

--- a/QService/Source/Quintessence.QService.QPlanetService.Host/Web.config
+++ b/QService/Source/Quintessence.QService.QPlanetService.Host/Web.config
@@ -13,8 +13,16 @@
     <!--<add name="SharePoint" connectionString="Url=http://qshare.quintessence.be;UserName=ceddy;Password=1975Koffiekoek;Domain=QUINT" />-->
     <add name="ReportingService" connectionString="Url=http://ws13-qnt-sql01/ReportServer_QNT01S/ReportExecution2005.asmx;UserName=ceddy;Password=1975Koffiekoek;Domain=QUINT" />
   </connectionStrings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.6.1" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.6.1" />
   </system.web>
   <system.serviceModel>
     <client>
@@ -190,7 +198,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.0" newVersion="4.2.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.1" newVersion="4.0.1.1" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
