--- a/QService/Source/Quintessence.QService.QPlanetService.Implementation/packages.config
+++ b/QService/Source/Quintessence.QService.QPlanetService.Implementation/packages.config
@@ -3,16 +3,21 @@
   <package id="AutoMapper" version="2.1.267" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
   <package id="EntityFramework" version="4.3.1" targetFramework="net45" />
-  <package id="Microsoft.Graph" version="1.21.0" targetFramework="net45" />
-  <package id="Microsoft.Graph.Core" version="1.19.0" targetFramework="net45" />
+  <package id="Microsoft.Graph" version="3.6.0" targetFramework="net461" />
+  <package id="Microsoft.Graph.Core" version="1.20.1" targetFramework="net461" />
   <package id="Microsoft.Identity.Client" version="4.14.0" targetFramework="net45" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.2.7" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
-  <package id="System.Buffers" version="4.4.0" targetFramework="net45" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.6.0" targetFramework="net45" />
-  <package id="System.Memory" version="4.5.3" targetFramework="net45" />
-  <package id="System.Net.Http" version="4.3.4" targetFramework="net45" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net45" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.6.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net45" />
   <package id="Unity" version="2.1.505.0" targetFramework="net45" />
 </packages>
