--- a/QService/Tests/Quintessence.QService.Business.Integration.Tests/App.config
+++ b/QService/Tests/Quintessence.QService.Business.Integration.Tests/App.config
@@ -1,11 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <configSections>
     <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging" />
   </configSections>
 
   <connectionStrings>
-    <add name="Quintessence" providerName="System.Data.SqlClient" connectionString="Data Source=localhost;Initial Catalog=Quintessence;Integrated Security=True;Pooling=false;" />
+    <add name="Quintessence" providerName="System.Data.SqlClient" connectionString="Data Source=localhost;Initial Catalog=Quintessence;Integrated Security=True;Pooling=false;"/>
     <add name="SharePoint" connectionString="Url=http://qshare;UserName=SPAdmin;Password=$Quint123;Domain=QUINTDOMAIN" />
   </connectionStrings>
 
@@ -48,16 +48,4 @@
       <errors switchValue="Off" name="Logging Errors &amp; Warnings" />
     </specialSources>
   </loggingConfiguration>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.1.1" newVersion="4.0.1.1" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.2.0.0" newVersion="4.2.0.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
 </configuration>
