--- a/QService/Source/Quintessence.QService.QPlanetService.Host/Web.config
+++ b/QService/Source/Quintessence.QService.QPlanetService.Host/Web.config
@@ -6,6 +6,10 @@
   <appSettings>
     <add key="AllowedPasswordChars" value="ABCDEFGHJKMNPQRSTUVWXYZ23456789" />
     <add key="DictionaryImportFolder" value="c:\temp\QPlanetImportDictionaries" />
+    <add key="AzureAdB2C.TenantId" value="kenzequintessenceb2cdev.onmicrosoft.com" />
+    <add key="AzureAdB2C.ApplicationId" value="cb70571a-aa65-4e68-96dc-dfc27d8a94a0" />
+    <add key="AzureAdB2C.B2cExtensionApplicationId" value="b6df2c72-70d1-4d04-bbe4-c9711bc1293e" />
+    <add key="AzureAdB2C.ClientSecret" value="53H1~0j_wvPj7B}}FdL1dv3," />
   </appSettings>
   <connectionStrings>
     <!--<add name="Quintessence" connectionString="Server=vm-test;Database=Quintessence;User ID=QuintessenceUser;Password=$Quint123;Trusted_Connection=False;Persist Security Info=True;" providerName="System.Data.SqlClient" />-->
