Moved creation of the Azure AD B2C user + updated candidate invitation e-mail
#6884

--- a/QPlanet/Source/Quintessence.QPlanet.Webshell/Web.config
+++ b/QPlanet/Source/Quintessence.QPlanet.Webshell/Web.config
@@ -16,6 +16,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="ReportshellUrl" value="http://vm-dev/QReport/" />
     <add key="ImportantMessage" value="This is your local version." />
+    <add key="QCandidateUrl" value="http://cvk.quintessenceconsulting.be/" />
   </appSettings>
   <system.web>
     <globalization uiCulture="nl-BE" culture="nl-BE" />
