Various refactorings: move model mapping to controller, code style, update release script
#6884

--- a/QService/Source/Quintessence.QService.QPlanetService.Host/Web.config
+++ b/QService/Source/Quintessence.QService.QPlanetService.Host/Web.config
@@ -10,6 +10,7 @@
     <add key="AzureAdB2C.ApplicationId" value="cb70571a-aa65-4e68-96dc-dfc27d8a94a0" />
     <add key="AzureAdB2C.B2cExtensionApplicationId" value="b6df2c72-70d1-4d04-bbe4-c9711bc1293e" />
     <add key="AzureAdB2C.ClientSecret" value="53H1~0j_wvPj7B}}FdL1dv3," />
+    <add key="QCandidateUrl" value="http://cvk.quintessenceconsulting.be/" />
   </appSettings>
   <connectionStrings>
     <!--<add name="Quintessence" connectionString="Server=vm-test;Database=Quintessence;User ID=QuintessenceUser;Password=$Quint123;Trusted_Connection=False;Persist Security Info=True;" providerName="System.Data.SqlClient" />-->
