Prepare for release 2

--- a/src/Hosts/Quintessence.QCandidate.Web/appsettings.Release.json
+++ b/src/Hosts/Quintessence.QCandidate.Web/appsettings.Release.json
@@ -19,5 +19,14 @@
   "ConnectionStrings": {
     "QPlanet": "Server=vm-test;Database=Quintessence;User ID=QuintessenceUser;Password=$Quint123;Trusted_Connection=False;Persist Security Info=True;"
   },
-  "PdfStorageLocation": "c:\\temp\\pdf"
+  "PdfStorageLocation": "c:\\temp\\pdf",
+  "AzureAdB2C": {
+    "Instance": "https://quintessenceb2c.b2clogin.com/tfp/",
+    "ClientId": "2aabbbb0-d932-4154-951d-5e324497b5b8",
+    "CallbackPath": "/signin-oidc",
+    "Domain": "quintessenceb2c.onmicrosoft.com",
+    "SignUpSignInPolicyId": "B2C_1_SignIn2",
+    "ResetPasswordPolicyId": "",
+    "EditProfilePolicyId": ""
+  }
 }
