Reset password policy
#6881

--- a/src/Hosts/Quintessence.QCandidate.Web/appsettings.Development.json
+++ b/src/Hosts/Quintessence.QCandidate.Web/appsettings.Development.json
@@ -14,7 +14,7 @@
     "CallbackPath": "/signin-oidc",
     "Domain": "kenzequintessenceb2cdev.onmicrosoft.com",
     "SignUpSignInPolicyId": "B2C_1_SignIn2",
-    "ResetPasswordPolicyId": "",
+    "ResetPasswordPolicyId": "B2C_1_PasswordReset2",
     "EditProfilePolicyId": ""
   }
 }
