--- a/src/Hosts/Quintessence.QCandidate.Web/appsettings.Release.json
+++ b/src/Hosts/Quintessence.QCandidate.Web/appsettings.Release.json
@@ -26,7 +26,7 @@
     "CallbackPath": "/signin-oidc",
     "Domain": "quintessenceb2c.onmicrosoft.com",
     "SignUpSignInPolicyId": "B2C_1_SignIn2",
-    "ResetPasswordPolicyId": "",
+    "ResetPasswordPolicyId": "B2C_1_PasswordReset2",
     "EditProfilePolicyId": ""
   }
 }
