--- a/src/Hosts/Quintessence.QCandidate.Web/appsettings.Development.json
+++ b/src/Hosts/Quintessence.QCandidate.Web/appsettings.Development.json
@@ -9,6 +9,7 @@
   },
   "PdfStorageLocation": "c:\\temp\\pdf",
   "AzureAdB2C": {
+    "Tenant": "https://kenzequintessenceb2cdev.b2clogin.com/",
     "Instance": "https://kenzequintessenceb2cdev.b2clogin.com/tfp/",
     "ClientId": "cb70571a-aa65-4e68-96dc-dfc27d8a94a0",
     "CallbackPath": "/signin-oidc",
