--- a/src/Hosts/Quintessence.QCandidate.Web/appsettings.Release.json
+++ b/src/Hosts/Quintessence.QCandidate.Web/appsettings.Release.json
@@ -21,6 +21,7 @@
   },
   "PdfStorageLocation": "c:\\temp\\pdf",
   "AzureAdB2C": {
+    "Tenant": "https://quintessenceb2c.b2clogin.com/",
     "Instance": "https://quintessenceb2c.b2clogin.com/tfp/",
     "ClientId": "2aabbbb0-d932-4154-951d-5e324497b5b8",
     "CallbackPath": "/signin-oidc",
