--- a/QService/Source/Quintessence.QService.QPlanetService.Host/Web.config
+++ b/QService/Source/Quintessence.QService.QPlanetService.Host/Web.config
@@ -6,17 +6,17 @@
   <appSettings>
     <add key="AllowedPasswordChars" value="ABCDEFGHJKMNPQRSTUVWXYZ23456789" />
     <add key="DictionaryImportFolder" value="c:\temp\QPlanetImportDictionaries" />
-    <!-- Dev 
-    <add key="AzureAdB2C.TenantId" value="quintessenceb2cdev.onmicrosoft.com" />
-    <add key="AzureAdB2C.ApplicationId" value="cb70571a-aa65-4e68-96dc-dfc27d8a94a0" />
+    <!--
+    <add key="AzureAdB2C.TenantId" value="kenzequintessenceb2cdev.onmicrosoft.com" />
+    <add key="AzureAdB2C.ApplicationId" value="b00dc971-4569-4395-8cdb-2a8ea2522a2a" />
     <add key="AzureAdB2C.B2cExtensionApplicationId" value="b6df2c72-70d1-4d04-bbe4-c9711bc1293e" />
-    <add key="AzureAdB2C.ClientSecret" value="53H1~0j_wvPj7B}}FdL1dv3," />
+    <add key="AzureAdB2C.ClientSecret" value="19NiNk1z6XGNOCdoHrT11G9..Mj8O~Rp-C" />
     -->
     <add key="AzureAdB2C.TenantId" value="quintessenceb2c.onmicrosoft.com" />
     <add key="AzureAdB2C.ApplicationId" value="b41941fc-ef70-4283-9f36-5d37264ecf66" />
     <add key="AzureAdB2C.B2cExtensionApplicationId" value="498b6fc8-0d28-4919-b6e0-ffeb578eba30" />
     <add key="AzureAdB2C.ClientSecret" value="2U.W7f861T.obUiJH~u3Wssq_qWKv_~vSM" />
-    <add key="QCandidateUrl" value="http://cvk.quintessenceconsulting.be/" />
+    <add key="QCandidateUrl" value="https://candidate.quintessence.be/" />
   </appSettings>
   <connectionStrings>
     <!--<add name="Quintessence" connectionString="Server=vm-test;Database=Quintessence;User ID=QuintessenceUser;Password=$Quint123;Trusted_Connection=False;Persist Security Info=True;" providerName="System.Data.SqlClient" />-->
