--- a/src/Hosts/Quintessence.QCandidate.Web/Quintessence.QCandidate.Web.csproj
+++ b/src/Hosts/Quintessence.QCandidate.Web/Quintessence.QCandidate.Web.csproj
@@ -23,9 +23,13 @@
     <AssemblyName>Quintessence.QCandidate.Web</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Contracts\Requests\**" />
     <Compile Remove="wwwroot\lib\**" />
+    <Content Remove="Contracts\Requests\**" />
     <Content Remove="wwwroot\lib\**" />
+    <EmbeddedResource Remove="Contracts\Requests\**" />
     <EmbeddedResource Remove="wwwroot\lib\**" />
+    <None Remove="Contracts\Requests\**" />
     <None Remove="wwwroot\lib\**" />
   </ItemGroup>
   <ItemGroup>
@@ -77,7 +81,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Contracts\Requests\" />
+    <Folder Include="Core\Domain\" />
   </ItemGroup>
 
   <ItemGroup>
