--- a/QPlanet/Source/Quintessence.QPlanet.ViewModel/Quintessence.QPlanet.ViewModel.csproj
+++ b/QPlanet/Source/Quintessence.QPlanet.ViewModel/Quintessence.QPlanet.ViewModel.csproj
@@ -383,6 +383,9 @@
     <Compile Include="Sim\EditSimulationContextModel.cs" />
     <Compile Include="Sim\EditSimulationContextUserModel.cs" />
     <Compile Include="Sim\EditSimulationTranslationModel.cs" />
+    <Compile Include="Base\Enumeration.cs" />
+    <Compile Include="Sim\QCandidateLayoutType.cs" />
+    <Compile Include="Sim\QCandidateSelectListItemModel.cs" />
     <Compile Include="Sim\SimulationLanguageModel.cs" />
     <Compile Include="Sim\SimulationMatrixEntryModel.cs" />
     <Compile Include="Sim\SimulationSetSelectListItemModel.cs" />
