Edited SP Assessment_GetByCandidateAndLanguage + edited release.sql. ProgramComponent : renamed controller + all related models/view. Made use of QCandidateLayout to show/hide link to PDF/Memo.
Related Work Items: #7786

--- a/src/Hosts/Quintessence.QCandidate.Web/Quintessence.QCandidate.Web.csproj
+++ b/src/Hosts/Quintessence.QCandidate.Web/Quintessence.QCandidate.Web.csproj
@@ -87,6 +87,7 @@
   <ItemGroup>
     <Folder Include="Core\Commands\" />
     <Folder Include="Infrastructure\EntityFrameworkCore\" />
+    <Folder Include="Pages\" />
   </ItemGroup>
 
   <ItemGroup>
