Add a basic model to the view and retrieve the FunctionsDescription from disk

--- a/src/Hosts/Quintessence.QCandidate.Web/appsettings.Development.json
+++ b/src/Hosts/Quintessence.QCandidate.Web/appsettings.Development.json
@@ -7,7 +7,8 @@
   "ConnectionStrings": {
     "QPlanet": "Server=.;Database=Quintessence_QPlanet;Trusted_Connection=True;"
   },
-  "PdfStorageLocation": "c:\\temp\\pdf",
+  "PdfStorageLocation": "C:\\Temp\\PDF",
+  "HtmlStorageLocation": "C:\\Temp\\HTML",
   "AzureAdB2C": {
     "Tenant": "https://kenzequintessenceb2cdev.b2clogin.com/",
     "Instance": "https://kenzequintessenceb2cdev.b2clogin.com/tfp/",
