--- a/src/Hosts/Quintessence.QCandidate.Web/appsettings.Release.json
+++ b/src/Hosts/Quintessence.QCandidate.Web/appsettings.Release.json
@@ -19,7 +19,8 @@
   "ConnectionStrings": {
     "QPlanet": "Server=vm-test;Database=Quintessence;User ID=QuintessenceUser;Password=$Quint123;Trusted_Connection=False;Persist Security Info=True;"
   },
-  "PdfStorageLocation": "c:\\temp\\pdf",
+  "PdfStorageLocation": "C:\\Temp\\PDF",
+  "HtmlStorageLocation": "C:\\Temp\\HTML",
   "AzureAdB2C": {
     "Tenant": "https://quintessenceb2c.b2clogin.com/",
     "Instance": "https://quintessenceb2c.b2clogin.com/tfp/",
